otel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - DOMAIN-NAME
    secretName: otel-secret
  rules:
  - host: DOMAIN-NAME
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-otel-demo-frontendproxy
            port:
              number: 8080
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: my-otel-demo-frontendproxy
            port:
              number: 8080
      - path: /feature
        pathType: Prefix
        backend:
          service:
            name: my-otel-demo-frontendproxy
            port:
              number: 8080
      - path: /loadgen/
        pathType: Prefix
        backend:
          service:
            name: my-otel-demo-frontendproxy
            port:
              number: 8080
      - path: /jaeger/ui
        pathType: Prefix
        backend:
          service:
            name: my-otel-demo-frontendproxy
            port:
              number: 8080
